--- a/style/style.css
+++ b/style/style.css
@@ -3,9 +3,9 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
   padding: 0;
   margin: 0;
+  font-family: "Open Sans", sans-serif;
 }
 
 .container {
@@ -36,8 +36,8 @@ body {
 .header_menu {
   align-items: center;
   flex-flow: row nowrap;
-  font-family: "Barlow", sans-serif;
   flex-grow: 1;
+  font-family: "Barlow", sans-serif;
 }
 
 .header_button {
@@ -99,10 +99,10 @@ body {
 }
 
 .main_content_link {
-  flex-flow: row nowrap;
-  font-style: normal;
   position: absolute;
+  flex-flow: row nowrap;
   padding-top: 154px;
+  font-style: normal;
 }
 
 .main_content_link a {
@@ -110,8 +110,7 @@ body {
   font-size: 18px;
   line-height: 24px;
   text-decoration: none;
-
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .main_content-area .main_content_title {
@@ -119,8 +118,8 @@ body {
 }
 
 .main_content-area_button {
-  display: flex;
   position: absolute;
+  display: flex;
   margin-top: 228px;
 
 }
@@ -128,24 +127,27 @@ body {
 .main_content-area_button button {
   width: 180px;
   height: 55px;
-  align-items: center;
-  border: 0.7px solid #FFFFFF;
-  background-color: rgba(28, 28, 28, 0);
   margin-right: 24px;
+  align-items: center;
+  border: 0.7px solid #ffffff;
+  background-color: rgba(28, 28, 28, 0);
+
 }
 
 .main_button_text {
+  font-family: "Barlow", sans-serif;
   font-style: normal;
-  font-weight: 300;
   font-size: 14px;
+  font-weight: 300;
   line-height: 28px;
   letter-spacing: 1px;
-  font-family: "Barlow", sans-serif;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .main_content_title {
+  position: absolute;
+  padding-left: 596px;
   flex-flow: row nowrap;
   font-style: normal;
   font-weight: 300;
@@ -153,30 +155,29 @@ body {
   line-height: 72px;
   text-align: right;
   color: #ffffff;
-  position: absolute;
-  padding-left: 596px;
+
 }
 
 .main_content_text {
-  color: #ffffff;
+  padding-left: 933px;
+  padding-right: 142px;
+  padding-top: 140px;
   position: absolute;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 28px;
   text-align: center;
-  padding-left: 933px;
-  padding-right: 142px;
-  padding-top: 140px;
+  color: #ffffff;
 }
 
 .main_content_price {
   position: absolute;
-  font-family: "Barlow", sans-serif;
-  font-style: normal;
   display: flex;
   padding-left: 146px;
   padding-top: 637px;
+  font-family: "Barlow", sans-serif;
+  font-style: normal;
 }
 
 .main_content_price button {
@@ -192,9 +193,9 @@ body {
 
 .main_content_price_night {
   position: absolute;
+  margin-left: 263px;
   width: 120px;
   height: 100px;
-  margin-left: 263px;
   background-color: #e9ece0;
 }
 
@@ -204,10 +205,10 @@ body {
 
 .main_content_price_night_from,
 .main_content_price_night_night {
-  font-weight: 300;
-  font-size: 12px;
   padding-left: 29px;
   padding-top: 22px;
+  font-weight: 300;
+  font-size: 12px;
 }
 
 .main_content_price_night_night {
@@ -216,12 +217,13 @@ body {
 }
 
 .main_content_price_night_money {
-  font-weight: 500;
-  font-size: 20px;
-  padding-left: 28px;
-  color: #333333;
   width: 60px;
   height: 28px;
+  padding-left: 28px;
+  font-weight: 500;
+  font-size: 20px;
+  color: #333333;
+
 }
 
 .main_article {
@@ -235,22 +237,20 @@ body {
 }
 
 .main_article_content_title {
+  padding-bottom: 50px;
   font-weight: 400;
   font-size: 40px;
   line-height: 40px;
   color: #5b6460;
-  padding-bottom: 50px;
 }
 
 .main_article_content_text {
+  padding-right: 105px;
   font-weight: 300;
   font-size: 16px;
   line-height: 30px;
   color: #000000;
-  padding-right: 105px;
 }
-
-
 
 .main_article a {
   padding-top: 17px;
@@ -289,68 +289,68 @@ body {
 }
 
 .main_post_content_excerption {
-  font-style: italic;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 36px;
-  color: #5B6460;
   margin-top: 30px;
+  font-style: italic;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
+  color: #5b6460;
 }
 
 .main_map {
+  display: flex;
   margin-left: 260px;
   margin-right: 53px;
-  display: flex;
   margin-bottom: 153px;
 }
 
 .main_map_title {
   margin-top: 100px;
-  line-height: 56px;
   margin-right: 96px;
+  line-height: 56px;
 }
 
 .main_facilities {
   width: 1408px;
   height: 971px;
-  background-color: #5b6460;
   margin-top: -155px;
-  color: #FFFFFF;
   font-style: normal;
+  color: #ffffff;
+  background-color: #5b6460;
+
 }
 
 .main_facilities_title {
+  padding-top: 150px;
+  padding-bottom: 100px;
   font-weight: 300;
   font-size: 40px;
   text-align: center;
-
-  padding-top: 150px;
-  padding-bottom: 100px;
 }
 
 .main_facilities_cards {
-  margin-left: 290px;
   display: flex;
   flex-wrap: wrap;
   width: 829px;
   height: 555px;
   justify-content: space-around;
+  margin-left: 290px;
 }
 
 .main_facilities_cards_card {
-  padding-right: 180px;
-  padding-bottom: 83px;
   width: 143px;
   height: 138px;
   align-items: center;
+  padding-right: 180px;
+  padding-bottom: 83px;
 }
 
 .main_facilities_cards_card_text {
+  text-align: center;
+  width: 144px;
   padding-top: 15px;
   font-weight: 400;
   font-size: 18px;
-  text-align: center;
-  width: 144px;
 }
 
 .main_facilities_cards_card_img {
@@ -374,13 +374,14 @@ body {
 
 .main_foto_about-us {
   position: absolute;
-  margin-top: 202px;
-  position: absolute;
   display: flex;
+  margin-top: 202px;
   margin-left: 626px;
 }
 
 .button_about-us {
+  width: 156px;
+  height: 156px;
   font-family: "Barlow", sans-serif;
   font-style: normal;
   font-weight: 300;
@@ -390,30 +391,29 @@ body {
   border-radius: 100px;
   border: none;
   background-color: #e9ece0;
-  width: 156px;
-  height: 156px;
+
 }
 
 .main_contact {
+  display: flex;
   margin-left: 146px;
   margin-top: -250px;
-  display: flex;
   margin-bottom: 133px;
 }
 
 .main_contact_about {
-  margin-left: 146px;
   display: flex;
+  margin-left: 146px;
   margin-bottom: 133px;
 }
 
 .main_contact_title h3 {
+  padding-bottom: 50px;
+  padding-right: 345px;
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
   color: #5b6460;
-  padding-bottom: 50px;
-  padding-right: 345px;
 }
 
 .main_contact_phone-email p {
@@ -421,8 +421,8 @@ body {
 }
 
 .main_contact_phone-email ul {
-  padding-left: 6px;
   margin-bottom: 27px;
+  padding-left: 6px;
 }
 
 .main_contact_social {
@@ -434,23 +434,22 @@ body {
 }
 
 .main_contact_price {
-  height: 288px;
   width: 386px;
-
+  height: 288px;
 }
 
 .main_contact_price_img {
-  height: 188px;
   width: 386px;
+  height: 188px;
 }
 
 .main_contact_price_button {
   position: absolute;
+  display: flex;
+  width: 386px;
+  height: 100px;
   font-family: "Barlow", sans-serif;
   font-style: normal;
-  display: flex;
-  height: 100px;
-  width: 386px;
 }
 
 .main_contact_price_button button {
@@ -460,20 +459,20 @@ body {
 
 .main_contact_price_button .main_content_price_night {
   position: relative;
-  margin: 0;
   width: 120px;
   height: 100px;
+  margin: 0;
 }
 
 .main_post,
 .main_post-2,
 .main_post-3 {
   display: flex;
+  width: 1117px;
+  height: 547px;
   margin-left: 146px;
   margin-right: 146px;
   margin-bottom: 162px;
-  width: 1117px;
-  height: 547px;
 }
 
 .main_post-3 .main_article_content_title {
@@ -487,12 +486,12 @@ body {
 }
 
 .main_post_content_link a {
+  margin-right: 31px;
   font-style: italic;
   font-weight: 400;
   font-size: 18px;
   line-height: 30px;
-  color: #5B6460;
-  margin-right: 31px;
+  color: #5b6460;
 }
 
 .main_post_content_link {
@@ -500,14 +499,14 @@ body {
 }
 
 .main_post_content .main_article_content_text {
+  width: 429px;
+  height: 243px;
+  padding-right: 0;
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
   line-height: 30px;
-  width: 429px;
-  height: 243px;
   color: #333333;
-  padding-right: 0;
 }
 
 .main_post-2 .main_post_content {
@@ -523,7 +522,7 @@ body {
   font-weight: 400;
   font-size: 40px;
   line-height: 56px;
-  color: #5B6460;
+  color: #5b6460;
 }
 
 .main_about_title {
@@ -535,7 +534,7 @@ body {
   font-weight: 400;
   font-size: 40px;
   line-height: 56px;
-  color: #5B6460;
+  color: #5b6460;
 }
 
 
@@ -582,19 +581,18 @@ body {
 
 .main_faq-content_text {
   margin-top: 24px;
-  background: #E9ECE0;
   padding-bottom: 50px;
   padding-left: 24px;
+  background: #E9ECE0;
 }
 
 .main_faq-content_text_title {
+  padding-top: 21px;
+  padding-bottom: 40px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 18px;
-  padding-top: 21px;
-  padding-bottom: 40px;
-
 }
 
 .main_faq-content_text_text {
@@ -606,23 +604,23 @@ body {
 }
 
 .panel-title {
-  font-size: 24px;
-  width: 100%;
   position: relative;
+  display: block;
+  width: 100%;
   margin: 0;
   padding-left: 24px;
-  display: block;
+  font-size: 24px;
   cursor: pointer;
 }
 
 .panel-content {
-  font-size: 20px;
-  padding: 0px 14px;
+  position: relative;
+  z-index: -1;
   margin: 0 14px;
+  padding: 0px 14px;
   height: 0;
   overflow: hidden;
-  z-index: -1;
-  position: relative;
+  font-size: 20px;
   opacity: 0;
   -webkit-transition: .4s ease;
   -moz-transition: .4s ease;
@@ -632,8 +630,8 @@ body {
 
 .panel:checked~.panel-content {
   height: auto;
-  opacity: 1;
   padding: 14px;
+  opacity: 1;
 }
 
 .arrow {
@@ -667,8 +665,8 @@ body {
 .footer {
   width: 1408px;
   height: 477px;
-  background-color: #5b6460;
   margin-top: -10px;
+  background-color: #5b6460;
 }
 
 .footer_news {
@@ -676,16 +674,16 @@ body {
   margin-left: 146px;
   margin-right: 146px;
   margin-bottom: 40px;
-  color: #ffffff;
   align-items: center;
+  color: #ffffff;
 }
 
 .footer_news_title {
+  margin-top: 100px;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
-  margin-top: 100px;
 }
 
 .footer_news .header_menu a {
@@ -697,9 +695,9 @@ body {
 }
 
 .footer_news .header_menu li {
-  padding-top: 0;
   margin-top: 103px;
   padding-right: 31px;
+  padding-top: 0;
 }
 
 .footer_news .header_menu li:first-child {
@@ -708,10 +706,10 @@ body {
 
 .footer_email-pay {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   margin-left: 146px;
   margin-right: 146px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .footer_email-pay_pay {
@@ -740,21 +738,21 @@ input {
 }
 
 .form-button {
-  height: 42px;
-  width: 42px;
   position: absolute;
   top: 0;
   right: 0;
+  height: 42px;
+  width: 42px;
   cursor: pointer;
   color: #5b6460;
   background: transparent;
 }
 
 ::-webkit-input-placeholder {
-  color: #ffffff;
   font-style: italic;
   font-weight: 300;
   font-size: 16px;
+  color: #ffffff;
 }
 
 .footer_email-pay_title {
@@ -965,8 +963,8 @@ input {
 
   .main_content,
   .main_content-area {
-    padding-bottom: 113px;
     width: 768px;
+    padding-bottom: 113px;
   }
 
   .main_content_title {
@@ -977,11 +975,11 @@ input {
   }
 
   .main_content_text {
-    font-weight: 400;
-    font-size: 20px;
     padding-left: 200px;
     padding-right: 142px;
     padding-top: 100px;
+    font-weight: 400;
+    font-size: 20px;
   }
 
 
@@ -996,11 +994,11 @@ input {
   }
 
   .main_article_content_title {
+    padding-bottom: 10px;
     font-weight: 400;
     font-size: 40px;
     line-height: 40px;
     color: #5b6460;
-    padding-bottom: 10px;
   }
 
   .main_article_content_text {
@@ -1023,10 +1021,9 @@ input {
   }
 
   .main_article .main_article_map {
-    padding: 30px;
     margin-right: 30px;
     margin-bottom: 165px;
-
+    padding: 30px;
   }
 
   .main_article_map .main_article_content_title {
@@ -1051,10 +1048,10 @@ input {
   }
 
   .main_facilities_cards {
-    margin-left: 10px;
-    margin-right: 0;
     width: 768px;
     height: 555px;
+    margin-left: 10px;
+    margin-right: 0;
   }
 
   .main_foto {
@@ -1080,17 +1077,17 @@ input {
   }
 
   .main_contact_title {
-    font-weight: 300;
-    font-size: 30px;
     padding-bottom: 10px;
     padding-right: 18px;
+    font-weight: 300;
+    font-size: 30px;
   }
 
   .main_contact_title h3 {
-    font-weight: 400;
-    font-size: 40px;
     padding-bottom: 0;
     padding-right: 0;
+    font-weight: 400;
+    font-size: 40px;
   }
 
   .main_article_content_text {
@@ -1102,8 +1099,8 @@ input {
   .main_post,
   .main_post-2,
   .main_post-3 {
-    margin-bottom: 400px;
     display: block;
+    margin-bottom: 400px;
   }
 
   .main_post_content {
@@ -1122,8 +1119,8 @@ input {
 
   .footer {
     width: 768px;
-    margin-top: -10px;
     height: 477px;
+    margin-top: -10px;
   }
 
   .footer_news {
@@ -1146,9 +1143,9 @@ input {
   }
 
   .footer_email-pay_title {
+    width: 332px;
     margin-left: 30px;
     margin-bottom: 40px;
-    width: 332px;
   }
 
   .footer_link {
